<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/app_bar_main"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tv_mobile"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/et_contact_mobile"
            android:layout_width="0dp"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="@dimen/sp_14"
            android:hint="@string/tv_hint_mobile"
            android:background="@null"/>
    </LinearLayout>
    <include layout="@layout/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tv_now_address"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/tv_now_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:drawableEnd="@mipmap/ic_main_right"
            android:hint="@string/tv_please_choice"
            />
    </LinearLayout>
    <include layout="@layout/line"/>
    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_margin="@dimen/dp_20"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/btn_orange_gradient_shape"
        android:text="@string/tv_Immediate_submission"/>
</LinearLayout>