<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/app_bar_main"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_verify_true_name"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/et_true_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="text"
                    android:textSize="@dimen/sp_14"
                    android:hint="@string/tv_hint_true_name"
                    android:background="@null"/>
            </LinearLayout>
           <include layout="@layout/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_verify_sex"
                    android:textColor="@color/black"
                    />
                <RadioGroup
                    android:id="@+id/rg_sex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="2">
                    <RadioButton
                        android:id="@+id/rb_man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/man"
                        />
                    <RadioButton
                        android:id="@+id/rb_woman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        android:text="@string/woman"
                        />
                </RadioGroup>
            </LinearLayout>
            <include layout="@layout/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_mobile"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:textSize="@dimen/sp_14"
                    android:hint="@string/tv_hint_mobile"
                    android:background="@null"/>
            </LinearLayout>
            <include layout="@layout/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_now_address"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/tv_now_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawableEnd="@mipmap/ic_main_right"
                    android:hint="@string/tv_please_choice"
                   />
            </LinearLayout>
            <include layout="@layout/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_detail_address"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="0dp"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/sp_14"
                    android:lineSpacingExtra="@dimen/dp_5"
                    android:hint="@string/tv_hint_address"
                    android:background="@null"/>
            </LinearLayout>
            <include layout="@layout/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_email"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/sp_14"
                    android:hint="@string/tv_hint_email"
                    android:background="@null"/>
            </LinearLayout>
            <include layout="@layout/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_id_num"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/et_id_num"
                    android:layout_width="0dp"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/sp_14"
                    android:hint="@string/tv_hint_id_num"
                    android:background="@null"/>
            </LinearLayout>
            <include layout="@layout/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_emergency_contact"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/et_emergency_contact"
                    android:layout_width="0dp"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/sp_14"
                    android:hint="@string/tv_hint_emergency_contact"
                    android:background="@null"/>
            </LinearLayout>
            <include layout="@layout/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_emergency_contact_mobile"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/et_emergency_contact_mobile"
                    android:layout_width="0dp"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/sp_14"
                    android:hint="@string/tv_hint_emergency_contact_mobile"
                    android:background="@null"/>
            </LinearLayout>
            <include layout="@layout/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_type_of_work"
                    android:textColor="@color/black"
                    />
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_type_of_work"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_below="@+id/rv_type_of_work"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:text="@string/tv_must_choice"
                        android:textColor="#ffff8b40"
                        android:textSize="12sp"
                        />
                </RelativeLayout>

            </LinearLayout>
            <include layout="@layout/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_gl"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/tv_gl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawableEnd="@mipmap/ic_main_right"
                    android:hint="@string/tv_please_choice"
                    />
            </LinearLayout>
            <include layout="@layout/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_hj"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/et_hj"
                    android:layout_width="0dp"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/sp_14"
                    android:hint="@string/tv_hj_hint"
                    android:background="@null"/>
            </LinearLayout>
            <include layout="@layout/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_id_zheng"
                    android:textColor="@color/black"
                    />
                <ImageView
                    android:id="@+id/iv_zheng"
                    android:layout_width="@dimen/dp_113"
                    android:layout_height="@dimen/dp_77"
                    android:src="@mipmap/ic_id_zheng"/>
                <ImageView
                    android:layout_width="@dimen/dp_113"
                    android:layout_height="@dimen/dp_77"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:src="@mipmap/ic_id_zheng_sl"/>
            </LinearLayout>
            <include layout="@layout/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_id_fan"
                    android:textColor="@color/black"
                    />
                <ImageView
                    android:id="@+id/iv_fan"
                    android:layout_width="@dimen/dp_113"
                    android:layout_height="@dimen/dp_77"
                    android:src="@mipmap/ic_id_fan"/>
                <ImageView
                    android:layout_width="@dimen/dp_113"
                    android:layout_height="@dimen/dp_77"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:src="@mipmap/ic_id_fan_sl"/>
            </LinearLayout>
            <include layout="@layout/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_id_fan"
                    android:textColor="@color/black"
                    />
                <ImageView
                    android:id="@+id/iv_zj"
                    android:layout_width="@dimen/dp_113"
                    android:layout_height="@dimen/dp_77"
                    android:src="@mipmap/ic_id_zj"/>
                <ImageView
                    android:layout_width="@dimen/dp_113"
                    android:layout_height="@dimen/dp_77"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:src="@mipmap/ic_id_zj_sl"/>
            </LinearLayout>
            <include layout="@layout/line"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:text="个人简介"
                android:textColor="#ff333333"
                android:textSize="14sp"
                />

            <EditText
                android:id="@+id/et_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/btn_gray_shape"
                android:enabled="true"
                android:gravity="top"
                android:hint="@string/tv_person_msg"
                android:inputType="textMultiLine"
                android:lineSpacingExtra="10dp"
                android:minHeight="@dimen/dp_108"
                android:padding="10dp"
                android:textSize="14sp" />
            <include layout="@layout/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_person_honour"
                    android:textColor="@color/black"
                    />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_imgs"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"/>


            </LinearLayout>
            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_margin="@dimen/dp_20"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/btn_orange_gradient_shape"
                android:text="@string/tv_Immediate_submission"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>