<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/app_bar_main"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/btn_white_shape"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/dp_16"
                android:padding="@dimen/dp_16"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/dp_16"

                        android:background="@color/gray1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="保证金"
                        android:textColor="#ff777777"
                        android:textSize="13sp"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:background="@color/gray1"/>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="保证金"
                        android:textColor="#ff333333"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:id="@+id/tv_bond"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3000元"
                        android:layout_alignParentRight="true"
                        android:textColor="#ffff5757"
                        android:textSize="19sp"
                        />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/dp_16"

                        android:background="@color/gray1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="支付方式"
                        android:textColor="#ff777777"
                        android:textSize="13sp"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:background="@color/gray1"/>
                </LinearLayout>

                <com.shanchuang.ssf.view.XRadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="vertical">
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:text="支付宝支付"
                        android:drawablePadding="@dimen/dp_10"
                        android:drawableLeft="@mipmap/ic_pay_ali"
                        android:drawableRight="@drawable/cb_sub_selector"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="微信支付"
                        android:drawablePadding="@dimen/dp_10"
                        android:drawableLeft="@mipmap/ic_pay_wx"
                        android:drawableRight="@drawable/cb_sub_selector"/>
                </com.shanchuang.ssf.view.XRadioGroup>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_tip"
                android:padding="@dimen/dp_16"
                android:drawablePadding="@dimen/dp_10"
                android:drawableStart="@mipmap/ic_tip"
                android:textColor="#ffa8a8a8"
                android:textSize="14sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16"
                android:lineSpacingExtra="@dimen/dp_10"
                android:text="@string/tv_deposit_tip_text"
                android:textColor="#ff797979"
                android:textSize="13sp"
                />
            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="@dimen/dp_120"
                android:layout_height="@dimen/dp_39"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/btn_orange_gradient_shape"
                android:text="@string/tv_pay_bzj"/>
            <TextView
                android:id="@+id/tv_cancel_pay"
                android:layout_width="@dimen/dp_120"
                android:layout_height="@dimen/dp_39"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:background="@drawable/btn_bbb_shape"
                android:text="@string/tv_cancel_pay"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>